# realm

./: .dockerignore  .gitignore  README.md  docker-compose.yml  env.example  package-lock.json  package.json  pyproject.toml  run.py
backend/: ARCHITECTURE_SUMMARY.md  DEVELOPER_ROADMAP.md  NEXT_STEPS.md  README.md  REFACTOR_DEMO.md  SIMPLIFICATION_PRD.md  TODO.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: upload.py
backend/app/services/: upload_service.py
backend/core/: config.py  database.py  dependencies.py
backend/docs/modular_architecture/: NEXT_STEPS.md  REFACTOR_DEMO.md
backend/docs/modular_architecture/simplification/: PLAN.md  README.md  SIMPLIFICATION_IMPLEMENTATION.md  TODO_SIMPLIFICATION.md
backend/gendoc/: Dockerfile  __init__.py  config.py  llm.py  main.py
backend/modules/projects/: README.md  __init__.py  models.py  router.py  schemas.py  service.py
backend/modules/upload/: __init__.py  models.py  repositories.py  router.py  schemas.py  service.py
backend/modules/upload/routers/: __init__.py  file_router.py  health_router.py  project_router.py
backend/rag/: Dockerfile  __init__.py  config.py  llm.py  main.py  vectorstore.py
backend/shared/: exceptions.py
backend/shared/models/: __init__.py  base.py
backend/shared/services/: __init__.py  file_storage.py
backend/shared/utils/: __init__.py  cache.py
backend/tests/: test_gendoc_llm.py  test_gendoc_main_workflows.py
backend/tests/modules/upload/: test_upload_router.py  test_upload_service.py
(+54 files in other folders)
